objects/Buyers__c.object
<CustomObject>
    <description>A lookup (child) of both Contacts and DSO (the relabeled Opportunity Object). This tracks who will be making a buying decision related to a DSO.</description>
    <fields>
        <fullName>Buyer_Attribute__c</fullName>
        <label>Buyer Attribute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Guide</fullName>
                </value>
                <value>
                    <fullName>Informant</fullName>
                </value>
                <value>
                    <fullName>Sniper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buyer_Legacy_ID__c</fullName>
        <label>Buyer Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you met this Buyer yet?</inlineHelpText>
        <label>Buyer Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_Position__c</fullName>
        <inlineHelpText>Select one from this list.</inlineHelpText>
        <label>Buyer Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Funds Keeper</fullName>
                </value>
                <value>
                    <fullName>Executive Spec</fullName>
                </value>
                <value>
                    <fullName>Spec</fullName>
                </value>
                <value>
                    <fullName>Daily Player</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buyer_Rating__c</fullName>
        <description>Rates the Buyer from highly supportive (+5) to highly opposed (-5) to our solution.</description>
        <inlineHelpText>Rate this Buyer's enthusiasm for our solution from highly supportive (+5) to highly opposed (-5).</inlineHelpText>
        <label>Buyer Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>+5</fullName>
                </value>
                <value>
                    <fullName>+4</fullName>
                </value>
                <value>
                    <fullName>+3</fullName>
                </value>
                <value>
                    <fullName>+2</fullName>
                </value>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buyer_Title__c</fullName>
        <description>This formula displays the Title of a Contact selected as a Buyer.</description>
        <formula>Contact_to_Buyers__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_to_Buyers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup relationship between the (parent) DSO/Opportunity and the (child) Buyers</description>
        <label>Buyer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Buyers</relationshipLabel>
        <relationshipName>Buyers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSO_to_Buyers__c</fullName>
        <description>A Master-Detail relationship between (master) DSO/Opportunity and (detail) Buyers</description>
        <label>DSO</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Buyers</relationshipLabel>
        <relationshipName>Buyers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Desired_Business_Outcome__c</fullName>
        <description>The outcome this Buyer would like to accomplish if this purchase decision is a success.</description>
        <inlineHelpText>What does this Buyer want to accomplish through this decision process? (Think verbs).</inlineHelpText>
        <label>Desired Business Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <description>Displays the name of the person listed in the Reports To field of the Contact Object. The purpose is to show the Reports To name when a Buyer is created.</description>
        <formula>Contact_to_Buyers__r.ReportsTo.FirstName+" "+
Contact_to_Buyers__r.ReportsTo.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reports To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_of_Motivation__c</fullName>
        <description>Describes this Buyer's willingness to change from Status Quo.</description>
        <inlineHelpText>Select one of the options.</inlineHelpText>
        <label>State of Motivation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Pain</fullName>
                </value>
                <value>
                    <fullName>Pursuit</fullName>
                </value>
                <value>
                    <fullName>Zero</fullName>
                </value>
                <value>
                    <fullName>Out-of-Bounds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Buyer</label>
    <nameField>
        <displayFormat>Buyer-{00000}</displayFormat>
        <label>Buyer#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buyers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>